--- a/posts/2022-07-06.md
+++ b/posts/2022-07-06.md
@@ -948,3 +948,287 @@ The expanded regions spill off the viewport in a few directions!
 ## Architecture in Materialize
 
 Forthcoming!
+
+
+
+
+## In-progress material
+
+Most of what we've seen above can be implemented atop most SQL databases.
+If you removed all `materialized` from view definitions, you would ask the system to reconstruct all results from scratch each query.
+That isn't why we are here, but it leads us to a case study of Materialize fundamentals.
+
+There are three fundamental ways that data are produced and maintained:
+1.  **Tables** and **sources** are *exogenous*: someone puts stuff in there, and Materialize writes it down.
+    The data are storage durably in the persistence layer, and need to be re-streamed each time they are used.
+2.  
+
+In fact, I used one keyword that 
+
+However, if you've been paying careful attention, you may have noticed that 
+
+## Universal Minesweepers
+
+While clicking on things can be fun, I hope the previous section has convinced you that SQL can be much better if your goal is to populate as many squares as possible.
+
+This leads us to a new meta-game, in the spirit of [Universal Paperclips](https://en.wikipedia.org/wiki/Universal_Paperclips):
+how efficiently can independent teams populate the board with flagged mines and safe tests?
+
+We'll go through a series of Materialize mechanisms that let you build out more efficient (and better isolated) infrastructure.
+
+### Clusters
+
+A "cluster" is Materialize's unit of isolation for computational resources, a bit like a "process" in an operating system.
+Within a cluster, views can share access to in-memory arrangements of data.
+At the same time, views within a cluster contend for resources; one badly behaved view may stall (or crash) the whole cluster.
+
+You can create multiple clusters for isolation, but the sharing between them is less efficient.
+All clusters share access to all tables, sources, views, and materialized views.
+Indexes are not shared across clusters, and you'll need to build them on the clusters that need them.
+
+By default you get put on a `default` cluster, with limited resources (and limited impact on other clusters).
+
+The first thing we'll want to do is create a new cluster for our team, to make sure we have exclusive access to some compute resources.
+This is done with the `create cluster` command, followed promptly by the `set cluster` command (
+```
+-- in the cloud product sizes are opaque strings: `small`, `large`, etc.
+materialize=> create cluster team_frank replicas (smol (size 'small'));
+-- in the local release sizes are strings containing numbers.
+materialize=> create cluster team_frank replicas (smol (size '1'));
+-- in either case, set the cluster to be the one we created.
+materialize=> set cluster = 'team_frank';
+```
+This spins up a new `team_frank` cluster with modest resources, and makes it our active cluster.
+Until we change the cluster, `team_frank` will be used for our query processing.
+
+This alone would make all of our `select * from should_test where team = 'frank'` queries that much faster:
+we'll have more compute resources for them, and we wont be contending with other teams for those resources.
+At the moment there are no such other teams, but we can imagine.
+
+### Indexes
+
+Indexes are Materialize's mechanism to maintain collections in memory and share them within the cluster.
+
+When you create an index (on a collection) Materialize will leap in to action and build a dataflow that computes and maintains the results.
+When you query that collection, say `select * from indexed_thing;`, Materialize will pull directly from the in-memory results.
+
+Where materialized views are about *sharing* data between clusters, indexes are about *arranging* data within a cluster.
+You create an index on a source, table, view, or materialized view, and it loads the contents into the memory of your cluster.
+More specifically, you can create an index with some subset of columns, and the data will be indexed by those columns.
+
+You can see that selecting from `should_test` is not as fast as we might like:
+```
+materialize=> select * from should_test;
+ x | y | test | team
+---+---+------+------
+(0 rows)
+
+Time: 381.977 ms
+```
+This is because `should_test` is a view, and we do a fair bit of work from its inputs to its outputs.
+```
+materialize=> explain select * from should_test;
+                  Optimized Plan
+--------------------------------------------------
+ Source materialize.public.tests (u4):           +
+ | Project (#0..=#3)                             +
+                                                 +
+ Source materialize.public.totals (u11):         +
+ | Filter (#3 = 0)                               +
+ | Project (#0..=#4)                             +
+                                                 +
+ Query:                                          +
+ %0 =                                            +
+ | Get materialize.public.totals (u11)           +
+ | Filter (#3 = 0)                               +
+ | Project (#0..=#2, #4)                         +
+ | FlatMap generate_series((#0 - 1), (#0 + 1), 1)+
+ | FlatMap generate_series((#1 - 1), (#1 + 1), 1)+
+ | Filter ((#0 != #4) OR (#1 != #5))             +
+ | Project (#2..=#5)                             +
+ | Distinct group=(#2, #3, #0, #1)               +
+                                                 +
+ %1 =                                            +
+ | Get materialize.public.tests (u4)             +
+ | Distinct group=(#0, #1, #2, #3)               +
+ | Negate                                        +
+                                                 +
+ %2 =                                            +
+ | Union %0 %1                                   +
+ | Threshold                                     +
+
+(1 row)
+
+Time: 13.305 ms
+materialize=>
+```
+
+When we create an index, things improve dramatically.
+```
+materialize=> create default index on should_test;
+CREATE INDEX
+Time: 254.244 ms
+materialize=> select * from should_test;
+ x | y | test | team
+---+---+------+------
+(0 rows)
+
+Time: 13.896 ms
+materialize=>
+```
+That time is now roughly the same time it takes to `explain` the query, which is mostly the overhead of me reaching Materialize in `us-east-1`.
+
+Of course, this isn't for free. We still had to do the work we did above, it's just it took me at least that long to type the new query.
+But, if we repeatedly select from `should_test` we see that it is consistently prompt:
+```
+materialize=> select * from should_test;
+ x | y | test | team
+---+---+------+------
+(0 rows)
+
+Time: 14.153 ms
+materialize=> select * from should_test;
+ x | y | test | team
+---+---+------+------
+(0 rows)
+
+Time: 15.938 ms
+materialize=> select * from should_test;
+ x | y | test | team
+---+---+------+------
+(0 rows)
+
+Time: 15.749 ms
+materialize=> select * from should_test;
+ x | y | test | team
+---+---+------+------
+(0 rows)
+
+Time: 13.309 ms
+materialize=>
+```
+
+You can also create an index on a subset of columns (or any expressions), giving fast random access to those columns.
+```
+materialize=> create index should_test_by_team on should_test (team);
+```
+This index will make it very fast to run our `select * from should_test where team = 'frank'` query.
+You can see in the explained plan the `ReadExistingIndex` node is annotated with `Lookup value ("frank")`.
+```
+materialize=> explain select * from should_test where team = 'frank';
+                       Optimized Plan
+------------------------------------------------------------
+ %0 =                                                      +
+ | ReadExistingIndex materialize.public.should_test_by_team+
+ | | Lookup value ("frank")                                +
+ | Project (#1..=#3, #0)                                   +
+
+(1 row)
+materialize=>
+```
+
+
+Indexes come with a cost: you have to maintain the results.
+Maintaining the results costs CPU and memory.
+Since the `team_frank` cluster is meant for the exclusive use of team `frank`, we can thin down the results before we index them.
+```
+materialize=> create view should_test_frank as select * from should_test where team = 'frank';
+materialize=> create default index on should_test_frank;
+```
+We now have a view `should_test_frank` that is locally indexed.
+We'll only keep records with `team = 'frank'`, which should reduce the work we have to do.
+
+Indexes doing a lot of other great things, from serving results fast to speeding up join processing.
+There is much more to learn about them later!
+
+### Materialized views
+
+Materialized views are Materialize's mechanism to maintain views durably and share them between clusters.
+
+Like indexes, materialized views *maintain* views, and can dramatically reduce the work that is re-done for repeated queries.
+Unlike indexes, materialized views can be shared between clusters, which opens up new data architectures.
+
+You may have noticed that we used several `create materialized view` commands in the examples above.
+I did these intentionally, at moments where I thought other clusters might benefit from the results.
+Let's take a closer look.
+
+When we created `errors` we did it as a materialized view.
+```sql
+-- Errors are too bad. But they don't end the game.
+create materialized view errors as ...
+```
+This will let anyone else observe the `errors` collection from their own cluster.
+They don't need to hop on to the `default` cluster and potentially overwhelm it.
+
+We also made `totals` a materialized view.
+```sql
+-- The number of adjacent mines for probed locations.
+create materialized view totals as ...
+```
+This represents the board state, and multiple teams might each like to use this on their own clusters.
+In our definitions of `should_test` and `should_flag` we use `totals`, and having it pre-defined is helpful!
+
+Finally, we made `composited` a materialized view.
+```sql
+-- Convert counts to symbols, mines, clear cells, and include '.' for unknown locations.
+create materialized view composited as ...
+```
+This is the end result of a bunch of reasoning about the board state, and likely to be interesting to many folks.
+By making this a materialized view, we can both allow other clusters to read the results, and reduce the query load when one selects from it.
+
+
+# Appendix
+
+Why not use **mutual recursion**?!?
+
+In proposed syntax, Materialize allows you to write multiple views that depend on each other, potentially recursively.
+This would allow you to integrate the views we used to determine `should_test`, and feed them back into themselves.
+The result is a recursive query that can take large steps without repeatedly inserting in to the `tests` table.
+
+For example, you might write:
+
+```sql
+-- extract all transitively testable locations in one query
+create materialized view should_test_recursive as
+with mutually recursive
+    -- locations we should test for a mine of type `test`.
+    tests (x int, y int, test int, team text) as (
+        select * from correct_tests
+        union
+        select new_x as x, new_y as y, mine as test, team
+        from
+            (select * from totals where total = 0),
+            generate_series(x - 1, x + 1) as new_x,
+            generate_series(y - 1, y + 1) as new_y
+        where (x != new_x or y != new_y)
+    ),
+    -- locations that we will probe to get a mine count.
+    probes (probe_x int, probe_y int, x int, y int, team text, test int) as (
+        select probe_x, probe_y, x, y, team, test
+        from
+            tests,
+            generate_series(x - 1, x + 1) as probe_x,
+            generate_series(y - 1, y + 1) as probe_y
+        where x != probe_x OR y != probe_y
+    ),
+    -- reports back from the probed locations.
+    reports (x int, y int, mine int, team text, test int) AS (
+        select x, y, get_byte(sha256((probe_x::text || probe_y::text)::bytes), 0) % 6 as mine, team, test
+        from probes
+    ),
+    -- counts for each probe of the number of adjacent mines
+    totals (x int, y int, mine int, team text, total int8) as (
+        select x, y, mine, team, count(*) - 1 as total
+        from (
+            select * from reports
+            union all
+            select *, test from tests
+        )
+        where mine = test
+        group by 1, 2, 3, 4
+    )
+select * from tests except select * from correct_tests order by x, y;
+```
+
+This query starts with empty collections for each bound view, but then repeatedly updates all views in sequence, as if we ran them manually.
+But we don't have to run them manually, and instead just get out all the new locations we should test, even those we might learn about transitively.
