--- a/posts/2022-12-25.md
+++ b/posts/2022-12-25.md
@@ -271,7 +271,7 @@ WITH MUTUALLY RECURSIVE
         SELECT pos, pos+1, lhs
         FROM input, grammar_terms
         WHERE input.lit = grammar_terms.lit
-        UNION
+        UNION ALL
         -- Recursive case: two adjacent parses that follow the grammar.
         SELECT p1.lower, p2.upper, lhs
         FROM parses p1, parses p2, grammar_nonts
