--- a/posts/2022-07-06.md
+++ b/posts/2022-07-06.md
@@ -80,8 +80,7 @@ The intended experience is that of a vast and limitless sea uniformly full of da
 Why not let multiple folks interact with the Minesweeper board at the same time?
 
 You would need to back it in something like a database, and provide handy views that implement "the rules".
-Fortunately, Materialize is pretty much a database, so this could plausibly work out.
-Materialize is also great at defining and maintainng viwews over the data, which we will use to encode "the rules".
+Fortunately, Materialize is pretty much a databases, SQL lets us write views, so this could plausibly work out.
 
 We'll spend most of the rest of the post doing exactly this.
 We will assemble SQL tables, views, and queries to mock up a massively multiplayer minesweeper on Materialize.
@@ -92,9 +91,9 @@ We're going to make a few changes to Minesweeper in the interest of fun.
 
 First, clicking on a mine would normally end the game.
 It won't do that here.
-We'll keep track of the mines you've clicked on, both flags and tests, correct and incorrect, and perhaps the leaderboards will report all in a [Pareto frontier](https://en.wikipedia.org/wiki/Pareto_front).
+We'll keep track of the mines you've clicked on, both flags and tests, correct and incorrect, and perhaps the leaderboards will report all in something like a [Pareto frontier](https://en.wikipedia.org/wiki/Pareto_front).
 
-If you are a minesweeper purist you can stop playing as soon as you click on a mine, as Materialize will durably record your error.
+If you are a minesweeper purist, you can stop playing as soon as you click on a mine, as for better or for worse Materialize will have durably recorded your error.
 
 Second, rather than rolling a die to see *if* a grid cell has a mine for everyone, each grid cell *will* have a mine and we'll roll a die to stamp a number onto the mine.
 You can play the game where `0` means that a mine is present.
@@ -299,15 +298,10 @@ select probe_x, probe_y, x, y, team, test
 from
     correct_tests,
     generate_series(x - 1, x + 1) as probe_x,
-    generate_series(y - 1, y + 1) as probe_y
-where x != probe_x OR y != probe_y;
-
--- Each location reports some flavor of mine.
-create view reports as
-select x, y, get_byte(sha256((probe_x::text || probe_y::text)::bytes), 0) % 6 as mine, team, test
-from probes;
+    generate_series(y - 1, y + 1) as probe_y;
 
 -- The number of adjacent mines for probed locations.
+-- We include the center and subtract one to ensure we see a zero.
 create materialized view totals as
 select x, y, mine, team, count(*) - 1 as count
 from (
@@ -379,7 +373,7 @@ from (
             from totals
             where cells.x = totals.x
               and cells.y = totals.y
-              and cells.mine = totals.mine
+              and cells.mine = totals.test
               and cells.team = totals.team
         ),
         (   -- a `X` for mines correctly flagged by this team.
@@ -507,7 +501,7 @@ This is just a matter of looking at `totals` for counts of zero, and testing all
 -- We can test locations we know have no adjacent mines!
 -- In fact, we can do this over and over until we stop inserting things.
 create view should_test as
-select distinct new_x as x, new_y as y, mine as test, team
+select distinct new_x as x, new_y as y, test, team
 from
     (select * from totals where count = 0),
     generate_series(x - 1, x + 1) as new_x,
@@ -715,7 +709,7 @@ This rule is great for filling in all of those nooks and crannies you see up abo
 ```sql
 -- We can flag locations when the count equals the number of untested neighbors.
 create view should_flag_from as
-select x, y, mine as flag, team
+select x, y, test as flag, team
 from totals
 where totals.count > 0 and totals.count = 9 - (select count(*) from (
     select distinct *
@@ -723,7 +717,7 @@ where totals.count > 0 and totals.count = 9 - (select count(*) from (
         generate_series(x - 1, x + 1) as probe_x,
         generate_series(y - 1, y + 1) as probe_y,
         correct_tests as tests
-    where tests.x = probe_x and tests.y = probe_y and tests.test = mine
+    where tests.x = probe_x and tests.y = probe_y and tests.test = totals.test
 ));
 
 -- All adjacent, unmarked locations must be mines.
@@ -866,16 +860,16 @@ materialize=> select whole_row from output where mine = 2 and team = 'frank' ord
   . . . . . . . . . . . . . . . . . . . . .
   . . . . . . . . . . . . . . . . . . . . .
   . . . . . . . . . . . . . . 0 . . . . . .
-  . . . . . . . . . . . . . . . 4 . . . . .
-  . . . . . . . . . . 4 . . . . . . . . . .
+  . . . . . . . . . . . . . . . 2 . . . . .
+  . . . . . . . . . . 2 . . . . . . . . . .
   . . . . . . . . . . . . . . . . . . . . .
   . . . . . . . . . . . . 0 . . . . . . . .
-  . . . . . 2 6 . . . . . . 6 . . . 6 . . .
-  . . . . . . . . . . 4 . . . . . . . . . .
+  . . . . . 1 3 . . . . . . 3 . . . 3 . . .
+  . . . . . . . . . . 2 . . . . . . . . . .
   . . . . . . . . . . . . . . . . . . . . .
   . . . . . . . . . . . . . . . . . . . . .
   . . . 0 . . . . . . . . . . . . . 0 . . .
-  . . . . . . 2 . . . . 2 . . . . . . . . .
+  . . . . . . 1 . . . . 1 . . . . . . . . .
   . . . . . . . . . . . . . . . . . . . . .
   . . . . . . . . . . . . . . . . . . . . .
 (21 rows)
@@ -883,7 +877,7 @@ materialize=> select whole_row from output where mine = 2 and team = 'frank' ord
 materialize=>
 ```
 
-This player now has some zeros to explore, beyond the four at `(0, 0)`.
+This player now has some zeros to explore, beyond the `2` at `(0, 0)`.
 ```
 materialize=> insert into tests select * from should_test where team = 'frank';
 INSERT 0 30
